environments/prod/bulwark/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bulwark
  labels:
    app.kubernetes.io/name: bulwark
