environments/prod/bulwark/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bulwark
  namespace: bulwark
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "webmail.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: bulwark-bulwark-mail
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
